# sudoku

TAU/year3/C/c_workspace/Sudoku/:   .cproject  .project  08092018.txt  CMakeLists.txt  FileHandler.c  FileHandler.h  FileManager.c  FileManager.h  Game.c  Game.h  ILPSolver.c  ILPSolver.h  LinkedList.c  LinkedList.h  Parser.c  Parser.h  Solver.c  Solver.h  main.c  makefile  out  pple.system.timezone  save05092018.txt  save08092018.txt  sudoku.lp  test_01.stdin  testing.sh
TAU/year3/C/c_workspace/Sudoku/.idea_bu/: workspace.xml
TAU/year3/C/c_workspace/Sudoku/tdd/: in  in_2x2  in_2x2_unsolvable  out  res4  res5  res6  res_unsolvable_board  test1  test2  test3  test4  test5  test_unsolvable_board
